--- a/styles.css
+++ b/styles.css
@@ -24,19 +24,14 @@ h4 {
 .bold {
     font-weight: bold;
 }  
-.underline {
-    font-style:italic; color:rgb(178, 133, 20)
-}  
 * {
     font-family: 'Open Sans', sans-serif;
-}
-.unpack {
-    border: 1px solid black;
+
+.container {
+    display: flex;
+    justify-content: center;
     align-items: center;
-}
-.practice {
-    border: 1px solid black;
-    align-items: center;
+    }
     
    
 
